# illumio-technical-assignment

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/: app.py  parser.py  protocol.py  reader.py
src/log_parser/: parser.py  protocol.py  writer.py
test/: test_parser.py  test_sanity_check.py
test/examples/: example.csv  example.txt  large_mapping.csv
